--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.3",
+    "axios": "^0.27.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -35,6 +35,28 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(？！@axios)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/test/**/*.*"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "text",
+      "html"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -48,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.57.1"
   }
