--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
-    "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -24,6 +23,7 @@
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
