--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-numeric-input": "^2.2.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
