--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-numeric-input": "^2.2.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.4",
