--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
