--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-material-ui-form-validator": "^3.0.1",
     "react-numeric-input": "^2.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
