--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "universal-cookie": "^4.0.4",
@@ -47,6 +48,9 @@
     ]
   },
   "jest": {
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "transformIgnorePatterns": [
       "/node_modules/(？！@axios)"
     ],
