--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.4",
     "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -48,9 +50,6 @@
     ]
   },
   "jest": {
-    "modulePaths": [
-      "<rootDir>"
-    ],
     "transformIgnorePatterns": [
       "/node_modules/(？！@axios)"
     ],
